buildscript {
  repositories {
    jcenter()
  }
  configurations.maybeCreate('pitest')
  dependencies {
    // reverting from 1.4.8 -> 1.4.7 to get proper reports, fix appears to be in the works for 1.5.0
    classpath group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: '1.4.7'
  }
}

plugins {
  id 'java'
  id 'org.owasp.dependencycheck' version '5.3.2.1' apply false
}

allprojects {
  sourceCompatibility = '11'
  targetCompatibility = '11'
}

sourceSets {
  performanceTest {
    java {
      srcDir file('src/gatling/simulations')
    }
    resources.srcDir file('src/gatling/conf')
    resources.srcDir file('src/gatling/resources')
  }
}

repositories {
  jcenter()
}

dependencies {
  performanceTestCompile group: 'org.scala-lang', name: 'scala-library', version: '2.12.9'
  performanceTestCompile group: 'io.gatling', name: 'gatling-core', version: '3.1.1'
  performanceTestCompile group: 'io.gatling', name: 'gatling-http', version: '3.1.1'
}
